fix:修復有寫unit test卻顯示no test files問題

--- a/.drone.yml
+++ b/.drone.yml
@@ -7,5 +7,5 @@ steps:
   commands:
     - go build
     - echo "************testing************"
-    - go test
+    - go test ./...
     - echo "********testing complete********"
